# dotmac-platform

./: .agent-run.sh  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.infra.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  shared  tailwind.config.js
.claude/: settings.json
.github/workflows/: ci.yml  lint.yml
alembic/: env.py
alembic/versions/: 0d8b3a1c2e4f_add_git_repositories.py  15dbba693b0f_add_platform_enum_to_settingdomain.py  1f2c3b4a5d6e_add_clone_operations.py  2025_10_14_1128-dc34675b64e9_add_service_lifecycle_tables.py.bak  2025_11_30_1200_add_workflow_tenant_scope.py  2025_11_30_2332-4f9f8c53f4ce_initial_schema.py  2025_12_01_0001-add_deployment_license_fields.py  2b7a9c4d1e8f_add_disaster_recovery_plans.py  3a9b2c7d4f10_add_app_catalog.py  4c8d1e5f9a20_add_instance_catalog_item.py  5e1f7a2c9d3b_add_release_repo.py  6b1b7f6c8a44_add_session_refresh_tokens.py  6b2d8a4f1c30_add_app_upgrades.py  799a0ecebdd4_initial_schema.py  7c9d2f1a3b4e_add_upgrade_id_to_deploy_approvals.py  8d1f0a2b3c4d_add_upgrade_cancellation_fields.py  99f13692b073_merge_heads.py  a1b2c3d4e5f6_add_notifications.py  a1b2c3d4e5f7_add_onboarding_completed.py  a2b3c4d5e6f7_add_batch_deploy_git_ref.py  a3f1c7d89e02_add_deploy_secret_to_deployment_logs.py  a7c9d1e3f5b7_add_server_ssh_host_key_fingerprint.py  b2c3d4e5f6a8_add_otel_export_configs.py  b3c4d5e6f7a8_add_webhook_logs_and_notification_channels.py  b4f2a8c91d03_add_modules_flags_plans_backups_domains.py  b8d9e0f1a2c3_add_organization_contact_fields.py  b9c0d1e2f3a4_add_organizations_and_org_scoping.py  c4d5e6f7a8b9_flatten_catalog_items.py  c7d8e9f0a1b2_make_erp_fields_nullable.py  c7e3a1b4d902_add_webhooks_audit_tags_alerts.py  d2f9c8b7a0f1_add_password_reset_tokens_and_username_unique.py  d4e5f6a7b8c9_merge_heads_add_instances_auto_deploy.py  d5e6f7a8b9c0_simplify_registries.py  d6e7f8a9b0c1_make_git_repo_url_nullable.py  e1f2a3b4c5d6_registry_only_cleanup.py  e3f7b8c9d0e1_add_secret_rotation_logs.py  e6f7a8b9c0d1_add_git_repo_webhook_secret_encrypted.py  f2a4c6d8e0b1_add_ssh_keys.py  f3a5b7c9d1e3_add_git_repo_registry_url.py  f9a1b2c3d4e5_add_signup_requests.py
app/: celery_app.py  celery_scheduler.py  config.py  errors.py  main.py  metrics.py  observability.py  rate_limit.py  web_home.py
app/api/: audit.py  auth.py  auth_flow.py  catalog.py  deps.py  dr.py  git_repos.py  github_webhooks.py  health.py  instance_export.py  instances.py  notification_channels.py  notifications.py  observability.py  organizations.py  otel.py  persons.py  rbac.py  scheduler.py  settings.py  ssh_keys.py
app/models/: __init__.py  alert_rule.py  app_upgrade.py  audit.py  auth.py  backup.py  catalog.py  clone_operation.py  deploy_approval.py  deployment_batch.py  deployment_log.py  domain_settings.py  dr_plan.py  drift_report.py  feature_flag.py  git_repository.py  health_check.py  (+22 more)
docs/: API.md  FRAPPE_CLOUD_FEATURE_PARITY_ROADMAP.md  NBTI_PUBLIC_SECTOR_APP_JOURNEY.md  PLATFORM_MANAGEMENT_APP_JOURNEY.md  ui-ux-audit-2026-03-04-wave2.md
libs/shared-core/: README.md  pyproject.toml  pytest.ini  requirements-dev.txt
libs/shared-core/.github/workflows/: ci.yml
libs/shared-core/shared_core/base/: base_model.py  base_service.py
libs/shared-core/shared_core/config/: __init__.py  settings.py
libs/shared-core/shared_core/errors/: exceptions.py
libs/shared-core/shared_core/logging/: logger.py
libs/shared-core/shared_core/schemas/: response.py
libs/shared-core/tests/: test_shared_core.py
scripts/: README.md  bootstrap_servers.py  fetch_vendor_assets.py  fix_line_length.py  lint_sqlalchemy_style.py  seed_admin.py  seed_rbac.py  settings_sync.py  settings_validate.py  setup_local_platform.py
services/platform-core/: .env.test  pyproject.toml  requirements-dev.txt  run.py  run_tests.sh
services/platform-core/.github/workflows/: ci.yml
services/platform-core/alembic/: env.py
services/platform-core/app/: main.py  scheduler.py
services/platform-core/app/core/: config.py
services/platform-core/app/db/: init_db.py  redis.py  session.py
services/platform-core/app/modules/audit/: models.py  router.py  service.py
services/platform-core/app/modules/config/: models.py  router.py  service.py
services/platform-core/app/modules/feature_flags/: models.py  router.py  service.py
services/platform-core/app/modules/health/: router.py  service.py
services/platform-core/app/modules/logging/: models.py  router.py  service.py
services/platform-core/app/modules/notifications/: models.py  router.py  service.py
services/platform-core/app/modules/webhooks/: models.py  router.py  service.py
services/platform-core/app/utils/: redis_client.py
services/platform-core/tests/: conftest.py  test_health.py  test_logging.py  test_notifications.py  test_webhooks.py
templates/: base.html  dashboard.html  index.html  onboarding.html  platform_base.html  settings.html
tests/: conftest.py  shared_fixtures.py  test_alert_email.py  test_alert_resolution.py  test_api_audit.py  test_api_auth.py  test_api_auth_flow.py  test_api_catalog.py  test_api_health.py  test_api_improvements_wave1.py  test_api_instances_approvals.py  test_api_instances_webhooks.py  test_api_notification_channels.py  test_api_organizations.py  test_api_persons.py  test_api_rbac.py  test_api_scheduler.py  test_api_settings.py  test_api_signup.py  test_api_version_header.py  test_approval_expiry.py  test_audit_middleware.py  test_auth_dependencies.py  test_auth_flow.py  test_auth_flow_cookies.py  test_auth_services.py  test_avatar_services.py  test_backup_service.py  test_caddy_service.py  test_clone_service.py  test_core_services_extra.py  test_deploy_instance_generation.py  test_deploy_service.py  test_domain_settings_services.py  test_dr_service.py  test_dr_tasks.py  test_email_services.py  test_fleet_dashboard.py  test_ghcr_deploy.py  test_git_repo_service.py  (+34 more)
(+1014 files in other folders)
