[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dotmac-platform"
version = "1.0.0"
description = "DotMac Platform - Multi-tenant ISP management control plane"
authors = ["DotMac Team <dev@dotmac.io>"]
packages = [{ include = "dotmac", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
dotmac-shared = { path = "../dotmac-shared", develop = true }
# Or for production: dotmac-shared = { git = "https://github.com/org/dotmac-shared.git", tag = "v1.0.0" }

fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
celery = { extras = ["redis"], version = "^5.4.0" }
alembic = "^1.13.0"
email-validator = "^2.3.0"
slowapi = "^0.1.9"
aiohttp = "^3.13.2"
dnspython = "^2.8.0"
jinja2 = "^3.1.6"
kombu = "^5.6.1"
opentelemetry-api = "^1.38.0"
opentelemetry-sdk = "^1.38.0"
prometheus-client = "^0.23.1"
pybreaker = "^1.4.1"
pyotp = "^2.9.0"
pytz = "^2025.2"
qrcode = "^8.2"
sendgrid = "^6.12.5"
strawberry-graphql = "^0.287.0"
tenacity = "^9.1.2"
python-dateutil = "^2.9.0.post0"
twilio = "^9.8.7"
opentelemetry-instrumentation-requests = "^0.59b0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.7.0"
