[tool.poetry]
name = "dotmac_platform"
version = "0.1.0"
description = "DotMac Deployment Control Plane"
authors = ["Codex <codex@local>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "0.110.3"
uvicorn = {version = "0.30.1", extras = ["standard"]}
sqlalchemy = "2.0.31"
psycopg = {version = "3.1.19", extras = ["binary"]}
alembic = "1.13.2"
pydantic = {version = "2.7.4", extras = ["email"]}
python-dotenv = "1.0.1"
jinja2 = "3.1.4"
redis = "5.0.4"
celery = {version = "5.4.0", extras = ["redis"]}
prometheus-client = "0.20.0"
httpx = "0.27.0"
anyio = "4.2.0"
opentelemetry-api = "1.26.0"
opentelemetry-sdk = "1.26.0"
opentelemetry-exporter-otlp = "1.26.0"
opentelemetry-instrumentation-fastapi = "0.47b0"
opentelemetry-instrumentation-sqlalchemy = "0.47b0"
opentelemetry-instrumentation-celery = "0.47b0"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
passlib = {version = "1.7.4", extras = ["bcrypt"]}
bcrypt = "4.0.1"
pyotp = "2.9.0"
cryptography = "42.0.8"
paramiko = "^3.4.0"
python-multipart = "^0.0.22"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
pytest-cov = "5.0.0"
pytest-asyncio = "^1.3.0"
ruff = ">=0.4.0"
mypy = ">=1.10.0"
bandit = ">=1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "T20"]
ignore = [
    "S101",   # allow assert
    "S603",   # allow subprocess
    "S607",   # allow partial executable path
    "B008",   # allow Depends() in function defaults (FastAPI pattern)
    "B904",   # allow raise without from in except (too noisy to fix all at once)
    "S110",   # allow try/except/pass (used for optional features)
    "UP042",  # allow __future__ annotations (kept for compatibility)
    "E402",   # allow imports not at top (circular dep pattern, main.py setup)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106", "S108", "E402", "N806", "F841", "B017"]
"alembic/**" = ["E402", "F821"]
"scripts/**" = ["S105"]
"app/schemas/auth_flow.py" = ["S105"]  # token_type = "bearer" is not a password
"app/services/ssh_service.py" = ["S507", "S602"]  # paramiko WarningPolicy + local shell exec
"app/services/deploy_service.py" = ["S602"]  # shell=True for chained git commands
"app/api/auth_flow.py" = ["N806"]  # _ME_UPDATABLE_FIELDS constant inside function
"app/schemas/common.py" = ["UP046"]  # Generic subclass pattern kept for readability
"app/services/drift_service.py" = ["S106"]  # admin_password param is not hardcoded
"app/services/health_service.py" = ["S608"]  # query is not user-controlled
"app/services/webhook_service.py" = ["S104"]  # 0.0.0.0 binding is intentional
"app/web/dashboard.py" = ["S324"]  # md5 for gravatar hash, not security
"app/web/instances.py" = ["S324"]  # md5 for gravatar hash, not security

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["paramiko", "paramiko.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B324", "B507", "B602"]  # allow assert, md5 etags, paramiko WarningPolicy, shell=True

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
